# ros_unit_tests_example

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
google_mock_example_package/: CMakeLists.txt  package.xml
google_mock_example_package/include/: MyClass.hpp
google_mock_example_package/launch/: node_launcher.launch
src/: my_node.cpp
unit_tests_example_package/: CMakeLists.txt  package.xml
unit_tests_example_package/launch/: node_launcher.launch
unit_tests_example_package/test/: MyClass_test.cpp
