<?xml version="1.0"?>
<package format="2">
  <name>google_mock_example_package</name>
  <version>1.0.0</version>
  <description>ROS package showing the usage of google mock.</description>
  <maintainer email="kmartinho8@gmail.com">Carlos Gomes</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>genmsg</depend>
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>std_msgs</depend>
</package>
